# pre-commit-hs

./: pre-commit.cabal
app/: Main.hs
src/: Lib.hs
